[gd_scene load_steps=3 format=3 uid="uid://tmuop3d46fuu"]

[ext_resource type="Script" path="res://scene/scripts/ship/TargetReticles.gd" id="1_qln6w"]
[ext_resource type="Texture2D" uid="uid://bhimdu3g6758a" path="res://assets/crosshairs/crosshair023.png" id="2_et6fu"]

[node name="TargetReticles" type="Node3D"]
script = ExtResource("1_qln6w")

[node name="TargetReticle" type="TextureRect" parent="."]
modulate = Color(1, 1, 0.509804, 0.552941)
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("2_et6fu")

[node name="MainReticle" type="TextureRect" parent="."]
modulate = Color(0.0705882, 0.490196, 0.235294, 0.6)
offset_right = 40.0
offset_bottom = 40.0

[node name="OffscreenReticle" type="TextureRect" parent="."]
modulate = Color(0.351375, 0.758363, 0.639129, 0.392157)
offset_right = 40.0
offset_bottom = 40.0
pivot_offset = Vector2(32, 32)
texture = ExtResource("2_et6fu")
